fix a nasty templating bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -637,7 +637,7 @@
     </div>
 
     <script>
-        const API_URL = "<%= {apiUrl} %>";
+        const API_URL = "<%= apiUrl %>";
         console.log(API_URL);
         const socket = io();
 
